--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 DISCORD_MODE=channel
 
 # Discord Bot
-DISCORD_BOT_TOKEN="MTA3NzgzOTQxMjU0MjU5MTA0OA.GqFE-7.fRMmhoudIF-ezbHOtqUG4_FXBAurMJ-c0SIeFc"
+DISCORD_BOT_TOKEN=
 
 
 # Discord Channel
@@ -16,7 +16,7 @@ DISCORD_CHANNEL_MAX_MESSAGE=2
 DISCORD_FORUM_ID=
 
 # Open AI
-OPEN_AI_API_KEY="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"
+OPEN_AI_API_KEY=
 
 # Max Tokens
 OPEN_AI_MAX_TOKENS=1000
